[package]
name = "cool-rs"
version = "0.1.0"
authors = ["Wander Lairson Costa <wander.lairson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3.9"
lazy_static = "1.4.0"

[dev-dependencies]
glob = "0.3.0"
